# routes/event.routes.js
@@ -4,8 +4,8 @@ const eventRoutes = express.Router();
 const {eventController} = require('../controllers/event.controller.js')
 
 eventRoutes.post('/create', eventController.createEvent);
-eventRoutes.get('/:id', eventController.getEventById);
-eventRoutes.get('/list', eventController.getAllEvent);
+eventRoutes.get('/list/:id', eventController.getEventById);
+eventRoutes.get('/listevents', eventController.getA);
 eventRoutes.put('/update/:id', eventController.updateEvent);
 eventRoutes.delete('/delete/:id', eventController.deleteEvent);
 
